create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header1 cid-rZDFY3MUZj mbr-fullscreen mbr-parallax-background" id="header1-4">
+<section class="engine"><a href="https://mobirise.info/b">create a site</a></section><section class="header1 cid-rZDFY3MUZj mbr-fullscreen mbr-parallax-background" id="header1-4">
 
     
 
@@ -106,22 +106,26 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <p class="mbr-text">
                     <strong>Address</strong>
-                    <br>Saraswat Education Society,&nbsp;<br>Hampankatta, Mangaluru, &nbsp;<br>Dakshina Kannada District, 
-<br>Karnataka - 575001.<br>
-                    <br><br><br><br><strong>Contacts</strong>
-                    <br>Email: info@SESociety.com
-                    <br>Phone: +91 824 2441297
-                    <br><br></p>
+                    <br>Saraswat Education Society (Regd), 
+<br>Ganapathy School Campus, 
+<br>GHS Road, 
+<br>Mangalore, 
+<br>Karnataka 575001 
+<br>India<br>&nbsp;<br><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <p class="mbr-text">
-                    <strong>Links</strong>
-                    <br>Ganapathy English Medium School&nbsp;<br>Parijnan Vidyalay<br>Anandashram High School<br>Ganapathy Pre-University College<br>
-                    Parijnan Pre-University College<br><br><strong>Feedback</strong>
-                    <br>We welcome your queries and suggestions</p>
+                <p class="mbr-text"><strong>Links 
+<br></strong>Ganapathy English Medium School 
+<br>Anandashram High School
+<br>Ganapathy Pre-University College
+<br>Parijnan Pre-University College
+<br>
+<br><strong>Contact 
+<br></strong>saraswatedusociety@gmail.com
+<br>Phone: +91 824 2441297</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15558.440843435046!2d74.8406383!3d12.8684339!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc7abe9fda802838!2sGanapathi%20High%20School!5e0!3m2!1sen!2sin!4v1590072925232!5m2!1sen!2sin" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15558.439286357301!2d74.83189216977537!3d12.868459000000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba35a4dbd2b2555%3A0x331a34a319c46dc6!2sSaraswat%20Education%20Society!5e0!3m2!1sen!2sin!4v1595223894870!5m2!1sen!2sin" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
