--- a/page6.html
+++ b/page6.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header1 cid-s5c8P35jnE" id="header16-1q">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header1 cid-s5c8P35jnE" id="header16-1q">
 
     
 
@@ -113,20 +113,29 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <p class="mbr-text">
                     <strong>Address</strong>
+<br>Anandashram High School
+<br>Kotekar Post, Ullal Someshwar
+<br>Dakshina Kanara District
+<br>Karnataka
+<br>
 <br>Saraswat Education Society
-<br>Ganapathy High School Road, Hampankatta, Dakshina Kannada District, 
-<br>Mangaluru, Karnataka - 575001 
-<br><br>&nbsp;<strong><br></strong><br><strong>Contacts</strong>
-                    <br>Email: info@SESociety.com
-                    <br>Phone: +91 824 2441297
-                    <br><br></p>
+<br>Ganapathy High School Road, Hampankatta, 
+<br>Dakshina Kannada District, 
+<br>Mangaluru-575001
+<br>Karnataka State&nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <p class="mbr-text">
                     <strong>Links</strong>
-<br>Ganapathy English Medium School&nbsp;<br>Parijnan Vidyalay<br>Anandashram High School<br>Ganapathy Pre-University College<br>
-                    Parijnan Pre-University College<br><br><strong>Feedback</strong>
-                    <br>We welcome your queries and suggestions</p>
+<br>Links 
+<br>Ganapathy English Medium School 
+<br>Anandashram High School 
+<br>Ganapathy Pre-University College 
+<br>Parijnan Pre-University College 
+<br>
+<br><strong>Contact 
+</strong><br>saraswatedusociety@gmail.com
+<br>Phone: +91 824 2441297<br></p>
             </div>
             <div class="col-12 col-md-6">
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d124444.80795430802!2d74.78591550179452!3d12.914132374141346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba350a13025ca43%3A0xc65d6d7c1b05abd3!2sAnandashram%20High%20School!5e0!3m2!1sen!2sin!4v1595080539176!5m2!1sen!2sin" allowfullscreen=""></iframe></div>
