--- a/page9.html
+++ b/page9.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header1 cid-s5c0PUkqcn" id="header16-1l">
+<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="header1 cid-s5c0PUkqcn" id="header16-1l">
 
     
 
@@ -112,21 +112,17 @@
                 <p class="mbr-text">
                     <strong>Address</strong>
                     <br>Parijnan Pre-University College
-<br>Someshwar, Koṭekar Post, Ullal
-<br>Dakshin Kannada District
-<br>Karnataka
-<br><br><br>&nbsp;<br>
-                    <br><strong>Contacts</strong>
-                    <br>Email: info@SESociety.com
-                    <br>Phone: +91 824 2441297
-                    <br><br></p>
+<br>Someshwar, <br>Kotekar Post,<br> Ullal,&nbsp;<br>Dakshin Kannada District,<br>Karnataka,<br>India<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <p class="mbr-text">
-                    <strong>Links</strong>
-                    <br>Ganapathy English Medium School&nbsp;<br>Parijnan Vidyalay<br>Anandashram High School<br>Ganapathy Pre-University College<br>
-                    Parijnan Pre-University College<br><br><strong>Feedback</strong>
-                    <br>We welcome your queries and suggestions</p>
+                <p class="mbr-text"><strong>Links 
+</strong><br>Ganapathy English Medium School 
+<br>Anandashram High School 
+<br>Ganapathy Pre-University College 
+<br>Parijnan Pre-University College 
+<br>
+<br><br><strong>Contact </strong><br>saraswatedusociety@gmail.com
+<br>Phone: +91 824 2441297</p>
             </div>
             <div class="col-12 col-md-6">
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.7000792988497!2d74.85145681408125!3d12.79796969096998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba350a13025ca43%3A0x94b25acc23b18146!2sParijnan%20Pre%20University%20College!5e0!3m2!1sen!2sin!4v1595160867022!5m2!1sen!2sin" allowfullscreen=""></iframe></div>
