--- a/page5.html
+++ b/page5.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="header1 cid-s5c2vELCXq" id="header16-1n">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="header1 cid-s5c2vELCXq" id="header16-1n">
 
     
 
@@ -118,18 +118,18 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <p class="mbr-text">
                     <strong>Address</strong>
-                    <br>Ganapathy English Medium School,&nbsp;Hampankatta, Mangaluru,&nbsp;Dakshina Kannada District, Karnataka - 575001 <br><br><br>&nbsp;<br>
-                    <br><strong>Contacts</strong>
-                    <br>Email: info@SESociety.com
-                    <br>Phone: +91 824 2441297
-                    <br><br></p>
+                    <br>Ganapathy English Medium School,&nbsp;<br>Hampankatta, Mangaluru,&nbsp;<br>Dakshina Kannada District, Karnataka 575001<br>India</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <p class="mbr-text">
-                    <strong>Links</strong>
-                    <br>Ganapathy English Medium School&nbsp;<br>Parijnan Vidyalay<br>Anandashram High School<br>Ganapathy Pre-University College<br>
-                    Parijnan Pre-University College<br><br><strong>Feedback</strong>
-                    <br>We welcome your queries and suggestions</p>
+                <p class="mbr-text"><strong>Links 
+</strong><br>Ganapathy English Medium School 
+<br>Anandashram High School 
+<br>Ganapathy Pre-University College 
+<br>Parijnan Pre-University College 
+<br>
+<br><br><strong>Contact 
+<br></strong>saraswatedusociety@gmail.com
+<br>Phone: +91 824 2441297</p>
             </div>
             <div class="col-12 col-md-6">
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15558.440843435046!2d74.8406383!3d12.8684339!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc7abe9fda802838!2sGanapathi%20High%20School!5e0!3m2!1sen!2sin!4v1590072925232!5m2!1sen!2sin" allowfullscreen=""></iframe></div>
