--- a/page7.html
+++ b/page7.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-s5cb0fz2LU" id="header16-1r">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="header1 cid-s5cb0fz2LU" id="header16-1r">
 
     
 
@@ -113,21 +113,21 @@
                 <p class="mbr-text">
                     <strong>Address</strong>
                     <br>Parijnan Vidyalay 
-<br>Someshwar, Koṭekar Post, Ullal,
+<br>Someshwar, <br>Koṭekar Post, <br>Ullal,
 <br>Dakshin Kannada District
 <br>Karnataka
-<br>
-                    <br><strong>Contacts</strong>
-                    <br>Email: info@SESociety.com
-                    <br>Phone: +91 824 2441297
-                    <br><br></p>
+<br>India</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <p class="mbr-text">
-                    <strong>Links</strong>
-                    <br>Ganapathy English Medium School&nbsp;<br>Parijnan Vidyalay<br>Anandashram High School<br>Ganapathy Pre-University College<br>
-                    Parijnan Pre-University College<br><br><strong>Feedback</strong>
-                    <br>We welcome your queries and suggestions</p>
+                <p class="mbr-text"><strong>Links 
+</strong><br>Ganapathy English Medium School 
+<br>Anandashram High School 
+<br>Ganapathy Pre-University College 
+<br>Parijnan Pre-University College 
+<br>
+<br><strong>Contact</strong> 
+<br>saraswatedusociety@gmail.com
+<br>Phone: +91 824 2441297</p>
             </div>
             <div class="col-12 col-md-6">
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.7205814631525!2d74.85135551408123!3d12.796640490970793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba35c3fb0400555%3A0x7e52f0f8d48c965e!2sParijnan%20Vidyalay!5e0!3m2!1sen!2sin!4v1595157811572!5m2!1sen!2sin" allowfullscreen=""></iframe></div>
