--- a/page8.html
+++ b/page8.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header1 cid-s5ceGVt71K" id="header16-1t">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="header1 cid-s5ceGVt71K" id="header16-1t">
 
     
 
@@ -114,21 +114,19 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <p class="mbr-text">
                     <strong>Address</strong>
-                    <br>Ganapathy Pre-University College,&nbsp;Hampankatta, Mangaluru-575001 
-<br>Dakshina Kannada District, 
-<br>Karnataka
-<br>
-                    <br><strong>Contacts</strong>
-                    <br>Email: info@SESociety.com
-                    <br>Phone: +91 824 2441297
-                    <br><br></p>
+                    <br>Ganapathy Pre-University College,&nbsp;<br>Hampankatta,<br>Mangaluru,&nbsp;<br>Dakshina Kannada District, 
+<br>Karnataka 575001<br>India&nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <p class="mbr-text">
-                    <strong>Links</strong>
-                    <br>Ganapathy English Medium School&nbsp;<br>Parijnan Vidyalay<br>Anandashram High School<br>Ganapathy Pre-University College<br>
-                    Parijnan Pre-University College<br><br><strong>Feedback</strong>
-                    <br>We welcome your queries and suggestions</p>
+                <p class="mbr-text"><strong>Links 
+</strong><br>Ganapathy English Medium School 
+<br>Anandashram High School 
+<br>Ganapathy Pre-University College 
+<br>Parijnan Pre-University College 
+<br>
+<br><strong>Contact 
+</strong><br>saraswatedusociety@gmail.com
+<br>Phone: +91 824 2441297</p>
             </div>
             <div class="col-12 col-md-6">
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1635.3812744183192!2d74.83960747020753!3d12.86818347717318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba35a4dbd2d1399%3A0x332e42c3183cd786!2sGanapathy%20Aided%20Pre%20University%20College!5e0!3m2!1sen!2sin!4v1595160314997!5m2!1sen!2sin" allowfullscreen=""></iframe></div>
