--- a/page7.html
+++ b/page7.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="header1 cid-s5cb0fz2LU" id="header16-1r">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header1 cid-s5g5yjWRuN" id="header16-2e">
 
     
 
